@@ -241,6 +241,7 @@ enum text_object_type {
 	OBJ_pid_environ_list,
 	OBJ_pid_exe,
 	OBJ_pid_openfiles,
+	OBJ_pid_parent,
 	OBJ_pid_state,
 	OBJ_pid_state_short,
 	OBJ_pid_stderr,
