@@ -1,3 +1,6 @@
+2009-11-15
+	* Added support for $pid_parent
+
 2009-11-14
 	* Added support for $pid_state and $pid_state_short
 	* Added support for $cmdline_to_pid
